# DEF-W9-24_DarkDriving

./: .env.serve  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  README.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
assets/: hero.html
configs/: debug.toml  detection.toml  multi_source.toml  paper.toml  retinexformer.toml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-loss-functions.md  PRD-04-training-pipeline.md  PRD-05-evaluation.md  PRD-06-export-pipeline.md  PRD-07-integration.md
scripts/: evaluate.py  export.py  find_batch_size.py  monitor_and_ship.sh  train.py  train_cuda.py
src/dark_driving/: __init__.py  cuda_kernels.py  dataset.py  evaluate.py  losses.py  model.py  multi_dataset.py  serve.py  train.py  utils.py
tasks/: INDEX.md
tests/: test_cuda_kernels.py  test_dataset.py  test_export.py  test_losses.py  test_model.py  test_train.py
