[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dark-driving"
version = "0.1.0"
description = "DarkDriving: Low-light enhancement benchmark for autonomous driving"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0",
    "safetensors>=0.4.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "onnxscript>=0.6.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "huggingface-hub>=0.20.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tomli>=2.0.0",
    "lpips>=0.1.4",
    "pyiqa>=0.1.10",
    "scikit-image>=0.22.0",
    "torchmetrics>=1.2.0",
    "einops>=0.7.0",
    "timm>=0.9.12",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dark_driving"]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
